# spotiseek

./: .gitignore  pyproject.toml
spotiseek/: audioconverter.py  cli.py  database.py  logging.yml  songs.db  soulseek.py  spotify.py
spotiseek/queries/setup/: artists.sql  blacklisted_songs.sql  downloaded_songs.sql  song_artists.sql
